...
        android:layout_marginTop="16dp"
        android:hint="Number"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:hint="name"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:layout_marginTop="224dp"
        android:hint="Province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="276dp"
        android:onClick="updateContact"
        android:text="Update Data"
...
